# 3D_renderer

./: CMakeLists.txt  README.md
lib/: 3D_renderer
src/: main.cpp
